packages/jsii/test/negatives/neg.internal-underscore-interface.1.ts
///!MATCH_ERROR: the name of members marked as @internal must begin with an underscore

export interface IMyInterface {
  /** @internal */
  propertyWithInternalButNotUnderscorePrefix: string;
}
